--- a/style.css
+++ b/style.css
@@ -268,6 +268,24 @@ section#contact {
   color: #fff;
 }
 
+/* Footer */
+
+.bottom-container {
+  position: absolute;
+  height: 80px;
+  bottom: 10%;
+}
+.footer-links {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.icon {
+  margin: 20px 10px;
+  color: white;
+}
+
 #binance-name:hover {
   color: yellow;
 }
