--- a/style.css
+++ b/style.css
@@ -232,6 +232,16 @@ section#contact {
   }
 }
 
+/*  About */
+.about {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 20%;
+}
+
 /* Coins style */
 .coin-list,
 .exchange-list {
